--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "type": "module",
   "private": true,
+  "license": "MIT",
   "scripts": {
     "clean": "rimraf src/.observablehq/cache",
     "build": "observable build",
     "dev": "observable preview",
     "deploy": "observable deploy",
-    "observable": "observable"
+    "observable": "observable",
+    "format": "prettier . --write"
   },
   "dependencies": {
     "@observablehq/framework": "^1.13.0",
@@ -14,6 +16,7 @@
     "d3-time-format": "^4.1.0"
   },
   "devDependencies": {
+    "prettier": "^3.4.2",
     "rimraf": "^5.0.5"
   },
   "engines": {
